fix: models block text alignment

--- a/src/containers/ServicesPage/components/Models/Models.module.scss
+++ b/src/containers/ServicesPage/components/Models/Models.module.scss
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  @media (max-width: 768px) {
+  @media (max-width: 1200px) {
     padding: 150px 20px 100px;
   }
 }
@@ -66,7 +66,7 @@
 
   @media (max-width: 1200px) {
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     justify-content: flex-start;
     gap: 1rem;
   }
@@ -101,7 +101,7 @@
   & .image {
     width: 50%;
     justify-self: flex-end;
-    @media (max-width: 768px) {
+    @media (max-width: 1200px) {
       display: none;
     }
 
